--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3978,10 +3978,10 @@ Doro:
 
 # DNS
 DNS:
-  regex: '(?:DNS|AirTab)[ _\-]([^;/]+)Build|(?:S4505M|SD01M)[);/ ]'
+  regex: '(?:DNS|AirTab)[ _\-]([^;/)]+)(?: Build|\))|(?:S4505M|SD01M)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: '(S4505M|SD01M)[);/ ]'
+    - regex: '(?:DNS[_ ])?(S4505M|SD01M|S4502|S4003|S4003)[);/ ]'
       model: '$1'
     - regex: 'AirTab[ _\-]([^;/]+)Build'
       model: 'AirTab $1'
@@ -5370,7 +5370,7 @@ Hasee:
 
 # Hisense
 Hisense:
-  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|HITV300C|M470BS[AE]|E2281|EG680|I46D1G|HLTE([237]00T|200M|21[237]T|22[13]E|310M|510T)'
+  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|HITV300C|M470BS[AE]|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|21[237]T|22[13]E|310M|510T)'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -5409,6 +5409,11 @@ Hisense:
       model: 'E9'
     - regex: '(HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*)'
       model: '$1'
+
+    - regex: '(HAT4KDTV)[);/ ]'
+      device: 'tv'
+      model: '$1'
+
     - regex: '(?:HS-)?Hisense ([^;/]+) Build'
       model: '$1'
     - regex: 'Hisense ([^);/]+)'
@@ -9936,7 +9941,7 @@ Pentagram:
 
 # philips
 Philips:
-  regex: 'Philips|AND1E[);/ ]|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96'
+  regex: 'Philips|AND1E[);/ ]|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96|QM16[134]E'
   device: 'smartphone'
   models:
     - regex: 'AND1E(?: TV)?[);/ ]'
@@ -9946,6 +9951,9 @@ Philips:
       model: '$1'
       device: 'tablet'
     - regex: '(TPM1[79]1E)' # Smart Tv 2018/2019
+      model: '$1'
+      device: 'tv'
+    - regex: '(QM16[134]E)'
       model: '$1'
       device: 'tv'
     - regex: '(70PUH6774)_96'
@@ -13099,9 +13107,11 @@ Wexler:
 
 # Wiko
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P200)|WC300|W-(V720|V800|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300|U307AS'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P200)|WC300|W-(V720|V800|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300|U307AS|CINK PEAX 2'
   device: 'smartphone'
   models:
+    - regex: '(?:WIKO-)?Cink Peax 2'
+      model: 'Cink Peax 2'
     - regex: '(?:Wiko-)?Cink([^/;]*) Build'
       model: 'Cink$1'
     - regex: '(?:WIKO-)?CINK_([a-z0-9_]+)'
@@ -15484,9 +15494,14 @@ Kuliao:
 
 # Sugar
 Sugar:
-  regex: 'SUGAR (C[12]1|[YF]11|[YFS]9|C6|Y7|Y15)[);/ ]'
+  regex: 'SUGAR (?:C[12]1|[YF]11|[YFS]9|C6|Y7|Y8|Y1[25])[);/ ]'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: 'SUGAR Y([78]) MAX[);/ ]'
+      model: 'Y$1 Max'
+    - regex: 'SUGAR (C[12]1|[YF]11|[YFS]9|C6|Y7|Y1[25])[);/ ]'
+      model: '$1'
+
 
 # Xshitou
 Xshitou:
