--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1858,7 +1858,7 @@ Garmin-Asus:
 
 # Asus
 Asus:
-  regex: 'Asus|Transformer|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)[);/ ]|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(520|620|55[2345])KL|ZD55[23]KL|ZS600KL|ZS(6[236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE'
+  regex: 'Asus|Transformer|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)[);/ ]|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(520|620|55[2345])KL|ZD55[23]KL|ZS600KL|ZS(6[236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00VD'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -2030,6 +2030,8 @@ Asus:
       model: 'ZenFone Go Life'
     - regex: '(?:ASUS_)?G550KL'
       model: 'ZenFone Go TV'
+    - regex: '(?:ASUS_)?Z00VD' #ZC500TG
+      model: 'ZenFone Go'
     - regex: '(?:ASUS_)?(X003)'
       model: 'ZenFone Pegasus'
     - regex: '(?:ASUS_)?X005'
@@ -2183,7 +2185,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU |(?:blu|Dash)[ _]([^/;]+) Build|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.0(?: HD)?|A4)|ENERGY (DIAMOND|XL)|LIFE XL|Dash XL|PURE XL|Life One X2|GRAND 5.5 HD|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro'
+  regex: 'BLU |(?:blu|Dash)[ _]([^/;]+) Build|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.0(?: HD)?|A4)|ENERGY (DIAMOND|XL)|LIFE XL|Dash XL|PURE XL|Life One X2|GRAND 5.5 HD|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE'
   device: 'smartphone'
   models:
    - regex: 'Advance (4.0 ?[LM]|4.0|5.0(?: HD)?|A4)'
@@ -2196,8 +2198,10 @@ Blu:
      model: 'Studio Selfie LTE'
    - regex: 'STUDIO ONE'
      model: 'Studio One'
-   - regex: 'STUDIO SELFIE (2|LTE)'
+   - regex: 'STUDIO SELFIE ([23]|LTE)'
      model: 'Studio Selfie $1'
+   - regex: 'STUDIO SELFIE'
+     model: 'Studio Selfie'
    - regex: 'ENERGY DIAMOND'
      model: 'Energy Diamond'
    - regex: 'ENERGY XL'
@@ -3528,12 +3532,12 @@ Crosscall:
 
 # Cube
 Cube:
-  regex: '(<!myPhone ?)Cube|(U[0-9]+GT|K8GT)|(T8-PLUSM?S?)[);/ ]'
+  regex: '(<!myPhone ?)Cube|(U[0-9]+GT|K8GT)|(?:T8-PLUSM?S?|T8PLUSML)[);/ ]'
   device: 'tablet'
   models:
     - regex: 'U27GT'
       model: 'Talk 8'
-    - regex: 'T8-PLUSM?S?[);/ ]'
+    - regex: '(?:T8-PLUSM?S?|T8PLUSML)[);/ ]'
       model: 'T8 Ultimate'
     - regex: 'U55GT'
       model: 'Talk 79'
@@ -9370,7 +9374,7 @@ Obi:
 
 # onda
 Onda:
-  regex: 'Onda|(?:V820w|V891[w]?|V919(?: 3G)? Air)[ _-]DualOS|(?:V919 4G Air|V989 Air) Core8'
+  regex: 'Onda|(?:V820w|V891[w]?|V919(?: 3G)? Air)[ _-]DualOS|(?:V919 4G Air|V989 Air) Core8|T2101L2B1C'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -9397,6 +9401,9 @@ Onda:
       device: 'tablet'
     - regex: 'V989 Air Core8'
       model: 'V989 Air Core 8'
+      device: 'tablet'
+    - regex: 'T2101L2B1C'
+      model: 'oBook 20 Plus DualOS'
       device: 'tablet'
 
     - regex: '([a-z0-9]+)[ _]Onda'
@@ -9808,7 +9815,7 @@ Overmax:
 
 # Oysters
 Oysters:
-  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_4G|IndianV'
+  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_4G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G'
   device: 'tablet'
   models:
     - regex: 'Pacific[ ]?800i'
@@ -9820,10 +9827,12 @@ Oysters:
     - regex: 'Oysters ((?:Arctic|Indian|Atlantic|Pacific)[^/;]+) Build'
       device: 'smartphone'
       model: '$1'
-    - regex: '(T84ERI[ _]3G|T72HM(s_)?3G|(?:(T74HMi|T84Bi)[_ ]4G)|T84Ni[_ ][34]G|T104B_4G)'
+    - regex: '(T84ERI[ _]3G|T72HM(s_)?3G|(?:(T74HMi|T84Bi)[_ ]4G)|T84Ni[_ ][34]G|T104B_4G|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G)'
       model: '$1'
     - regex: '(T74MR)(4G)'
       model: '$1 $2'
+    - regex: 'T74Mai_3G'
+      model: 'T74MAi 3G'
     - regex: 'Oysters ([^/;]+)( Build|\))'
       model: '$1'
 # öwn (own)
@@ -11405,10 +11414,10 @@ SuperSonic:
 
 # Supra
 Supra:
-  regex: 'SUPRA ([^;/]+)(\)| Build)| NVTAB 7.0 3G'
+  regex: 'SUPRA|NVTAB 7.0 3G'
   device: 'smartphone'
   models:
-    - regex: 'SUPRA ([^;/]+)(?:\)| Build)'
+    - regex: 'SUPRA[ _]([^;/]+)(?: Build|\))'
       device: 'tablet'
       model: '$1'
     - regex: '(NVTAB 7.0 3G)'
@@ -14275,7 +14284,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J|402ZT|P545|P609)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J|Z963U|402ZT|P545|P609)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14299,6 +14308,8 @@ ZTE:
       model: 'V5 Max'
     - regex: 'N9101[);/ ]'
       model: 'Imperial'
+    - regex: 'Z963U[);/ ]'
+      model: 'Imperial Max'
     - regex: 'N9120[);/ ]'
       model: 'Avid'
     - regex: 'N9130[);/ ]'
@@ -15535,9 +15546,13 @@ Vodacom:
 
 # VKworld
 VKworld:
-  regex: '(VK700)-MAX[);/ ]'
+  regex: '(?:(?:VK700)-MAX|T5SE)[);/ ]'
   device: 'smartphone'
-  model: '$1 Max'
+  models:
+    - regex: '(VK700)-MAX[);/ ]'
+      model: '$1 Max'
+    - regex: 'T5SE[);/ ]'
+      model: 'T5 SE'
 
 # Mito
 Mito:
